<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MALL</string>
    <string name="title_section1">Store</string>
    <string name="title_section2">Photo</string>
    <string name="title_section3">Credits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Take Photo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_store">Store</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtLlamar">Llamar</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtDireccion">Direccion</string>
    <string name="txtTelefono">Telefono</string>
    <string name="txtHorarios">Horarios</string>
    <string name="txtWebsite">Website</string>
    <string name="txtEmail">Email</string>
    <string name="txtComentarios">Comentarios</string>
    <string name="txtFavoritos">Favoritos</string>
    <string name="txtUbicacion">Ubicacion</string>
    <string name="title_activity_details">DetailsActivity</string>

</resources>
